fix volumes and links rendering across all rubys
Array.to_s varies between ruby versions so had to switch to explicitly
rendering the array.

--- a/templates/runner.toml.erb
+++ b/templates/runner.toml.erb
@@ -4,19 +4,27 @@
   token = "<%= @token %>"
   tls-ca-file = ""
   executor = "<%= @executor %>"
-<% if @executor == 'ssh' %>
+<% if @executor == 'ssh' -%>
   [runners.ssh]
-<% end %>
-<% if @executor == 'docker' %>
+<% end -%>
+<% if @executor == 'docker' -%>
   [runners.docker]
     tls_verify = <%= @docker_tls_verify %>
     image = "<%= @docker_image %>"
     privileged = <%= @docker_privileged %>
     disable_cache = <%= @docker_disable_cache %>
 <% if @docker_volumes -%>
-    volumes = <%= @docker_volumes %>
+    volumes = [
+<% @docker_volumes.each do |volume| -%>
+      "<%= volume %>",
+<% end -%>
+    ]
 <% end -%>
 <% if @docker_links -%>
-    links = <%= @docker_links %>
+    links = [
+<% @docker_links.each do |link| -%>
+      "<%= link %>",
 <% end -%>
-<% end %>
+    ]
+<% end -%>
+<% end -%>
